tests/neg/i1716b.scala
object Fail {
  def f: Unit = {
    Some[_]        // error
  }
}